refactor: replace group/name with a single key for job dependency.