@@ -21,8 +21,7 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 import java.util.concurrent.atomic.AtomicInteger;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.junit.jupiter.api.TestInstance.Lifecycle.PER_CLASS;
 
 @Log4j2
@@ -49,11 +48,12 @@ class RaceJobSchedulerSingleTest {
     private final String tag = String.valueOf(System.currentTimeMillis());
     private final String afterTag = "after-" + System.currentTimeMillis();
     private final String afterTag2 = "after2-" + System.currentTimeMillis();
-    private final Map<String, Object> map = Map.of("test", "test");
+    private final Map<String, Object> map = java.util.Collections.singletonMap("test", "test");
 
     private final RaceJob job = RaceJob.builder()
             .group(tag)
             .name(tag)
+            .key(tag)
             .cron("*/1 * * * * ?")
             .timezone("+00:00")
             .data(map)
@@ -61,15 +61,15 @@ class RaceJobSchedulerSingleTest {
     private final RaceJob afterJob = RaceJob.builder()
             .group(afterTag)
             .name(afterTag)
-            .afterGroup(tag)
-            .afterName(tag)
+            .key(afterTag)
+            .dependsKey(tag)
             .data(map)
             .build();
     private final RaceJob afterJob2 = RaceJob.builder()
             .group(afterTag2)
             .name(afterTag2)
-            .afterGroup(afterTag)
-            .afterName(afterTag)
+            .key(afterTag2)
+            .dependsKey(afterTag)
             .data(map)
             .build();
 
@@ -79,20 +79,24 @@ class RaceJobSchedulerSingleTest {
     @Autowired
     private JobRegister jobRegister;
 
-    private void delay() throws InterruptedException {
-        Thread.sleep(1000);
+    private void delay() {
+        try {
+            Thread.sleep(1000);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
     }
 
     private void sleep() {
         try {
-            Thread.sleep(2000);
+            Thread.sleep(5000);
         } catch (InterruptedException e) {
             e.printStackTrace();
         }
     }
 
     @BeforeAll
-    void beforeAll(){
+    void beforeAll() {
         jobScheduler.add(job);
         jobScheduler.add(afterJob);
         jobScheduler.add(afterJob2);
@@ -109,9 +113,9 @@ class RaceJobSchedulerSingleTest {
 
     @AfterEach
     void after() {
-        jobScheduler.remove(job);
-        jobScheduler.remove(afterJob);
-        jobScheduler.remove(afterJob2);
+        jobScheduler.remove(job.toKey());
+        jobScheduler.remove(afterJob.toKey());
+        jobScheduler.remove(afterJob2.toKey());
     }
 
     private void reset() {
@@ -124,8 +128,8 @@ class RaceJobSchedulerSingleTest {
 
     @Test
     @Order(3)
-    void disable() throws InterruptedException {
-        jobScheduler.disable(job);
+    void disable() {
+        jobScheduler.disable(job.toKey());
         delay();
         reset();
         sleep();
@@ -137,7 +141,7 @@ class RaceJobSchedulerSingleTest {
     @Test
     @Order(4)
     void enable() {
-        jobScheduler.enable(job);
+        jobScheduler.enable(job.toKey());
         reset();
         sleep();
         assertGreaterZero(getSumCount(job));
@@ -147,8 +151,8 @@ class RaceJobSchedulerSingleTest {
 
     @Test
     @Order(8)
-    void remove() throws InterruptedException {
-        jobScheduler.remove(job);
+    void remove() {
+        jobScheduler.remove(job.toKey());
         delay();
         reset();
         sleep();
@@ -157,14 +161,13 @@ class RaceJobSchedulerSingleTest {
         assertZero(getSumCount(afterJob2));
     }
 
-
     @Test
     @Order(10)
-    void execute() throws InterruptedException {
-        jobScheduler.disable(job);
+    void execute() {
+        jobScheduler.disable(job.toKey());
         delay();
         reset();
-        jobScheduler.execute(job);
+        jobScheduler.execute(job.toKey());
         sleep();
         assertGreaterZero(getSumCount(job));
         assertGreaterZero(getSumCount(afterJob));
@@ -179,17 +182,17 @@ class RaceJobSchedulerSingleTest {
         AtomicInteger count3 = new AtomicInteger();
         int target = 5;
         int target2 = 3;
-        jobScheduler.registerHandler(job, (inner) -> {
+        jobScheduler.registerHandler(job.getKey(), (inner) -> {
             if (count.incrementAndGet() == target) {
                 throw new RuntimeException();
             }
         });
 
-        jobScheduler.registerHandler(afterJob, (inner) -> {
+        jobScheduler.registerHandler(afterJob.getKey(), (inner) -> {
             count2.incrementAndGet();
         });
 
-        jobScheduler.registerHandler(afterJob2, (inner) -> {
+        jobScheduler.registerHandler(afterJob2.getKey(), (inner) -> {
             if (count3.incrementAndGet() == target2) {
                 throw new RuntimeException();
             }
@@ -202,52 +205,124 @@ class RaceJobSchedulerSingleTest {
 
     @Test
     @Order(14)
-    void updateJob() throws InterruptedException {
+    void update() {
         RaceJob testJob = RaceJob.builder()
                 .group("test")
-                .name("test")
+                .name(String.valueOf(System.currentTimeMillis()))
+                .key("test")
                 .cron("*/3 * * * * ?")
                 .timezone("+00:00")
+                .version(1)
+                .enabled(true)
+                .build();
+        jobScheduler.add(testJob);
+
+        testJob.setDescription("new desc");
+        testJob.setKey("new key");
+        testJob.setTimezone("+08:00");
+        testJob.setCron("0 0 * * * ?");
+        testJob.setDependsKey("parent");
+        testJob.setData(Map.of("key", "value"));
+        testJob.setEnabled(false);
+        jobScheduler.add(testJob);
+
+        RaceJob notUpdated = jobScheduler.find(testJob.toKey());
+        assertNotEquals(testJob.getDescription(), notUpdated.getDescription());
+        assertNotEquals(testJob.getKey(), notUpdated.getKey());
+        assertNotEquals(testJob.getTimezone(), notUpdated.getTimezone());
+        assertNotEquals(testJob.getCron(), notUpdated.getCron());
+        assertNotEquals(testJob.getDependsKey(), notUpdated.getDependsKey());
+        assertNotEquals(testJob.getData(), notUpdated.getData());
+        assertNotEquals(testJob.getEnabled(), notUpdated.getEnabled());
+
+        testJob.setVersion(2);
+        jobScheduler.add(testJob);
+
+        RaceJob updated = jobScheduler.find(testJob.toKey());
+        assertEquals(testJob.getDescription(), updated.getDescription());
+        assertEquals(testJob.getKey(), updated.getKey());
+        assertEquals(testJob.getTimezone(), updated.getTimezone());
+        assertEquals(testJob.getCron(), updated.getCron());
+        assertEquals(testJob.getDependsKey(), updated.getDependsKey());
+        assertEquals(testJob.getData(), updated.getData());
+        assertNotEquals(testJob.getEnabled(), updated.getEnabled());
+    }
+
+    @Test
+    @Order(15)
+    @DisplayName("Verify job can be repeatedly enabled and disabled")
+    void enableAndDisable() throws InterruptedException {
+        RaceJob testJob = RaceJob.builder()
+                .group("test")
+                .name("enable-disable-" + System.currentTimeMillis())
+                .key("test")
+                .cron("*/1 * * * * ?") // 1s interval
+                .timezone("+00:00")
+                .enabled(false)
                 .build();
         AtomicInteger count = new AtomicInteger();
-        jobScheduler.registerHandler(testJob, (inner) -> {
+        jobScheduler.registerHandler(testJob.getKey(), (inner) -> {
             count.incrementAndGet();
         });
         jobScheduler.add(testJob);
-        int target = 5;
 
-        updateTest(target, count, () -> {
-            jobScheduler.disable(testJob);
-        }, () -> {
-            jobScheduler.enable(testJob);
-        });
+        log.info("Starting repeated enable/disable cycles...");
+        for (int i = 0; i < 3; i++) {
+            jobScheduler.enable(testJob.toKey());
+            log.debug("Cycle {}: Enabled, waiting for execution...", i);
+            Thread.sleep(2500); // Allow ~2 executions
+            int countAfterEnable = count.get();
+            assertTrue(countAfterEnable > 0, "Job should have executed when enabled in cycle " + i);
 
-        updateTest(target, count, () -> {
-            jobScheduler.remove(testJob);
-        }, () -> {
-            jobScheduler.add(testJob);
-        });
+            jobScheduler.disable(testJob.toKey());
+            log.debug("Cycle {}: Disabled, verifying no further execution...", i);
+            Thread.sleep(2000);
+            assertEquals(countAfterEnable, count.get(), "Job should not execute when disabled in cycle " + i);
+        }
+
+        log.info("Verifying normal operation after repeated cycles...");
+        jobScheduler.enable(testJob.toKey());
+        int countBeforeFinal = count.get();
+        Thread.sleep(2500);
+        assertTrue(count.get() > countBeforeFinal, "Job should still be executing normally after multiple toggles");
+
+        jobScheduler.disable(testJob.toKey());
     }
 
-    void updateTest(int target, AtomicInteger count, Runnable before, Runnable after) throws InterruptedException {
-        int next = 0;
-        while (next < target) {
-            int c = count.get();
-            if (c > next) {
-                next = c;
-                before.run();
-                Thread.sleep(1000);
-                after.run();
-            } else {
-                Thread.sleep(500);
-            }
+    @Test
+    @Order(16)
+    @DisplayName("Verify job can be repeatedly added and removed")
+    void addAndRemove() throws InterruptedException {
+        RaceJob testJob = RaceJob.builder()
+                .group("test")
+                .name("add-remove-" + System.currentTimeMillis())
+                .key("test")
+                .cron("*/1 * * * * ?")
+                .timezone("+00:00")
+                .build();
+        AtomicInteger count = new AtomicInteger();
+        jobScheduler.registerHandler(testJob.getKey(), (inner) -> {
+            count.incrementAndGet();
+        });
+
+        log.info("Starting repeated add/remove cycles...");
+        for (int i = 0; i < 3; i++) {
+            jobScheduler.add(testJob);
+            log.debug("Cycle {}: Added, waiting for execution...", i);
+            Thread.sleep(2500);
+            int countAfterAdd = count.get();
+            assertTrue(countAfterAdd > 0, "Job should have executed after being added in cycle " + i);
+
+            jobScheduler.remove(testJob.toKey());
+            log.debug("Cycle {}: Removed, verifying no further execution...", i);
+            Thread.sleep(2000);
+            assertEquals(countAfterAdd, count.get(), "Job should not execute after being removed in cycle " + i);
         }
-        assertEquals(target, next);
     }
 
 
     @Test
-    @Order(14)
+    @Order(17)
     void test() throws InterruptedException, ExecutionException {
         int thread = 5;
         ExecutorService executor = Executors.newFixedThreadPool(thread);
@@ -263,11 +338,11 @@ class RaceJobSchedulerSingleTest {
                     var job = getJob(random.nextInt(range));
                     jobScheduler.add(job);
                     job = getJob(random.nextInt(range));
-                    jobScheduler.disable(job);
+                    jobScheduler.disable(job.toKey());
                     job = getJob(random.nextInt(range));
-                    jobScheduler.enable(job);
+                    jobScheduler.enable(job.toKey());
                     job = getJob(random.nextInt(range));
-                    jobScheduler.remove(job);
+                    jobScheduler.remove(job.toKey());
                 }
             }));
         }
@@ -280,6 +355,7 @@ class RaceJobSchedulerSingleTest {
         return RaceJob.builder()
                 .group("job")
                 .name(n + "")
+                .key(n + "")
                 .cron("* * * * * ?")
                 .timezone("+00:00")
                 .build();
